# classification_songs

./: .gitignore  _dataclasses.py  classification_for_genre_pop.py  classification_interface.py  configoration.py  get_info_interface.py  get_song_details_for_comparison.py  get_song_info.py  gitignore  logger_setup.py  pyproject.toml  update_file_interface.py
classification_songs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: gitignore
src/classification_songs/: main_file.py
src/classification_songs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/classification_songs/classifications/: classificatio_for_genre_classical.py  classification_for_genre_classical.py  classification_for_genre_pop.py  classification_for_genre_rap.py  classification_for_love_song.py  classification_interface.py  send_to_clasiffier.py
src/classification_songs/configorations/: _dataclasses.py  configoration.py  get_song_details_for_comparison.py  logger_setup.py
src/classification_songs/information/: get_info_interface.py  get_song_info.py  get_song_info_unittest.py
src/classification_songs/update_file/: formats.py  update_file_interface.py  upload_to_file.py
tests/: conftest.py  helpers.py  test_classification_for_genre_pop.py  test_get_song_details_for_comparison.py  test_send_to_clasiffier.py  test_upload_to_file.py
