[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "classification_songs"
version = "0.1.0"
description = "My software management system"
authors = [
  { name="Your Name", email="you@example.com" }
]
dependencies = [
  "flask"
]
[tool.setuptools]
packages = ["classification_songs"]