[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classification-songs"
version = "0.1.0"
description = "Song classification pipeline (stems, whisper transcription, features)"
readme = "README.md"
requires-python = ">=3.10"
# תלויות שהקוד משתמש בהן בפועל:
dependencies = [
  # אודיו וניתוח
  "librosa>=0.10",
  "numpy>=1.23",
  "matplotlib>=3.7",
  "mutagen>=1.46",

  # NLP
  "nltk>=3.8",

  # תורים ומודלי תמלול
  "redis>=5.0",
  "openai-whisper>=20231117",

  # הפרדת ערוצים (demucs CLI נקרא דרך subprocess)
  "demucs>=4.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["."]
include = ["classification_songs*"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-mock>=3.10"
]

# (אופציונלי) אם תרצה פקודת קונסול:
[project.scripts]
classification-songs = "classification_songs.main:main"
